Http2 to origin.

--- a/include/ts/apidefs.h.in
+++ b/include/ts/apidefs.h.in
@@ -884,6 +884,7 @@ typedef enum {
   TS_CONFIG_HTTP_CONNECT_DEAD_POLICY,
   TS_CONFIG_PLUGIN_VC_DEFAULT_BUFFER_INDEX,
   TS_CONFIG_PLUGIN_VC_DEFAULT_BUFFER_WATER_MARK,
+  TS_CONFIG_SSL_CLIENT_ALPN_PROTOCOLS,
   TS_CONFIG_LAST_ENTRY
 } TSOverridableConfigKey;
 
