--- a/proxy/http2/Makefile.am
+++ b/proxy/http2/Makefile.am
@@ -42,6 +42,10 @@ libhttp2_a_SOURCES = \
 	Http2Frame.h \
 	Http2ClientSession.cc \
 	Http2ClientSession.h \
+	Http2CommonSession.h \
+	Http2CommonSession.cc \
+	Http2ServerSession.cc \
+	Http2ServerSession.h \
 	Http2ConnectionState.cc \
 	Http2ConnectionState.h \
 	Http2DebugNames.cc \
